--- a/app/src/main/res/layout/new_layout.xml
+++ b/app/src/main/res/layout/new_layout.xml
@@ -9,6 +9,7 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 <TextView
+android:id="@+id/miwok_text_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:text="lutti"
@@ -16,6 +17,8 @@
 
     />
     <TextView
+
+        android:id="@+id/default_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="one"/>
