--- a/app/src/main/res/layout/activity_colors.xml
+++ b/app/src/main/res/layout/activity_colors.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ListView
+    android:id="@+id/color_list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Colors">
-
-</android.support.constraint.ConstraintLayout>
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+</ListView>
